--- a/presupuestador/public/index.html
+++ b/presupuestador/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./camara-curso.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--Cache-->
+    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="Last-Modified" content="0" />
+    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <!--Cache-->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
